# autodefine-cn-vn

./: .gitignore  CHANGELOG.md  LICENSE  README.md  __init__.py  config.json  justfile  main.py  pyproject.toml  vhong_todo.md
.claude/: CLAUDE.md
scripts/: build.py  link_to_anki.py  release.py
src/autodefine-cn-vn/: __init__.py  manifest.json
src/autodefine_cn_vn/: __init__.py  auto_define.py  auto_fill.py  config.json  config_manager.py  fetcher.py  manifest.json  parser.py  ui_hooks.py  utils.py
tests/: conftest.py  test_auto_define.py  test_auto_fill.py  test_config_manager.py  test_fetcher.py  test_parser.py  test_ui_hooks.py  test_utils.py
tests/assets/: dict_page_gongjin.html  vndic_net_gongjin.html  vndic_net_ni.html  vndic_net_nimen.html
